# goodboi

./: .gitignore  Cargo.toml
goodboi-cpu/: Cargo.toml
goodboi-cpu/src/: lib.rs
goodboi-cpu/src/instructions/: decode.rs  mod.rs
goodboi-cpu/tests/: instructions_test.rs
goodboi-cpu/tests/data/: instructions.json
goodboi-hardware/: Cargo.toml
goodboi-hardware/src/: lib.rs
goodboi-hardware/src/cpu/: mod.rs
goodboi-hardware/src/cpu/instructions/: decode.rs  mod.rs
goodboi-hardware/src/memory/: cartridge.rs  mbc.rs  mmu.rs
goodboi-hardware/tests/: instructions_test.rs
goodboi-hardware/tests/data/: instructions.json
goodboi-memory/: Cargo.toml
goodboi-memory/src/: cartridge.rs  lib.rs  mbc.rs  mmu.rs
