[package]
name = "goodboi-hardware"
version = "0.1.0"
authors = ["Anthony Kacyra <akacyra@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "^0.13"

[dev-dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"